--- a/src/View/Item/edit.html.twig
+++ b/src/View/Item/edit.html.twig
@@ -3,4 +3,6 @@
 {% block content %}
     <h1>Edit item {{ item.title }}</h1>
     {% include 'Item/_form.html.twig' %}
+
+    <a href="/">Back</a>
 {% endblock %}
