--- a/src/View/Item/index.html.twig
+++ b/src/View/Item/index.html.twig
@@ -11,7 +11,9 @@
 
     <ul>
         {% for item in items %}
-            <li><a href="/item/{{ item.id }}">{{ item.id }}. {{ item.title }}</a></li>
+            <li>
+                <a href="/item/{{ item.id }}">{{ item.id }}. {{ item.title }}</a>
+            </li>
         {% else %}
             <li>Nothing to display</li>
         {% endfor %}
